# King-Jawir

./: .cspell.json  .dockerignore  .env.example  .gitignore  .prettierignore  README.md  cleanup-deps.js  depcheck-api.json  depcheck-root.json  depcheck-web.json  docker-compose.prod.yml  docker-compose.yml  knip.json  lefthook.yml  package-lock.json  package.json  prisma.config.ts  ts-prune-report.txt  tsconfig.json  turbo.json  typecheck-report.txt
.github/: copilot-instructions.md
.github/workflows/: code-quality.yml  depcheck.yml  deploy-api.yml  deploy-rust.yml  deploy-web.yml  docker-build.yml  format.yml  lint.yml  ts-prune.yml
apps/api/: .env.example  .gitignore  API_INTEGRATION.md  Dockerfile  README.md  bunfig.toml  ecosystem.config.cjs  index.ts  package.json  prisma.config.ts  tsconfig.json
apps/nginx/: nginx.conf
apps/scraper/: Cargo.toml  Dockerfile  README.md  ecosystem.config.cjs  package.json
apps/scraper/src/: browser.rs  config.rs  main.rs  mod.rs
apps/scraper/src/blibli/: blibli_controller.rs  blibli_dto.rs  blibli_model.rs  blibli_repository.rs  blibli_service.rs  mod.rs
apps/scraper/src/scraper/: mod.rs  scraper_controller.rs  scraper_dto.rs  scraper_model.rs  scraper_repository.rs  scraper_service.rs
apps/scraper/src/tokopedia/: mod.rs  tokopedia_controller.rs  tokopedia_dto.rs  tokopedia_model.rs  tokopedia_repository.rs  tokopedia_service.rs
apps/web/: ADMIN_DASHBOARD_COMPLETE.md  ADMIN_README.md  Dockerfile  README.md  ecosystem.config.cjs  eslint.config.js  next.config.js  package.json  tailwind.config.js  tailwind.config.ts  (+1 more)
(+357 files in other folders)
