[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
clap = { version = "4.4", features = ["derive"] }
headless_chrome = { version = "1.0", default-features = false, features = ["fetch"] } 
regex = "1.10"
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
urlencoding = "2.1"
